GDHI-92 Refactor api's with regional filter <Arjun>